crates/bsql/tests/compile_fail/manual_positional.rs
fn main() {
    let _ = bsql::query!(
        "SELECT id FROM users WHERE id = $1"
    );
}
