crates/bsql/tests/compile_fail/manual_positional.stderr
error: manual positional parameters ($1, $2, ...) are not allowed in bsql — use $name: Type syntax instead
 --> tests/compile_fail/manual_positional.rs:2:13
  |
2 |       let _ = bsql::query!(
  |  _____________^
3 | |         "SELECT id FROM users WHERE id = $1"
4 | |     );
  | |_____^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
